examples/test_package/Double_dc_only_report_tool/steps/benchprove_precise_run5/#test_results_result.txt
Error evaluating Problog model:
    mode = check_mode((head, body), ["c*", "v*"], **kwd)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_builtin.py", line 630, in check_mode
    raise CallModeError(functor, args, accepted, location=location)
problog.engine_builtin.CallModeError: Invalid argument types for call: arguments: (6, X1), expected: (callable, any) or (var, any).Error evaluating Problog model:
    mode = check_mode((head, body), ["c*", "v*"], **kwd)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_builtin.py", line 630, in check_mode
    raise CallModeError(functor, args, accepted, location=location)
problog.engine_builtin.CallModeError: Invalid argument types for call: arguments: (6, X1), expected: (callable, any) or (var, any).Error evaluating Problog model:
    mode = check_mode((head, body), ["c*", "v*"], **kwd)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_builtin.py", line 630, in check_mode
    raise CallModeError(functor, args, accepted, location=location)
problog.engine_builtin.CallModeError: Invalid argument types for call: arguments: (6, X1), expected: (callable, any) or (var, any).